--- a/css/shop.css
+++ b/css/shop.css
@@ -513,7 +513,8 @@ ul.variation li > div:first-child {
 .nm-shop-loop-thumbnail {
 	position: relative;
 	overflow: hidden;
-	background: #eee;
+    background: #fff; /*medieval*/
+    min-height: 165px; /*medieval*/
 }
 .nm-shop-loop-thumbnail.nm-loader:after {
 	display: none;
@@ -529,7 +530,8 @@ ul.variation li > div:first-child {
 .nm-shop-loop-thumbnail img {
 	display: block;
 	width: 100%;
-	height: auto;
+    height: auto;
+    max-height: 165px; /*medieval*/
 }
 .images-lazyload .nm-shop-loop-thumbnail img {
     opacity: 0;
@@ -596,10 +598,10 @@ ul.variation li > div:first-child {
 }
 .nm-shop-loop-details h3 {
 	display: block;
-    font-size: 16px;
+    font-size: 14px; /*medieval*/
     line-height: 1.4;
     margin: 0;
-	padding-right: 32px;
+	/* padding-right: 32px; medieval */
 }
 .nm-shop-loop-details h3 a {
 	color: #8c8c8c;
